--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.vmoffwhitebg{
+    background: #FAF7FF
+}
+.vmoffwhitecolor{
+    color: #FAF7FF
+}
+.vmpurplebg{
+    background: #73519F
+}
+.vmpurplecolor{
+    color: #73519F
+}
+.btnoutlinepurple{
+    border-color: #73519F;
+    color: #73519F
+}
